deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-cv-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Optional, if using cert-manager
spec:
  ingressClassName: nginx
  rules:
    - host: murillomuller.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next-cv-svc
                port:
                  number: 80
  tls:
    - hosts:
        - murillomuller.dev
      secretName: murillomuller-dev-tls
